--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.application.name=runnerApplication
-spring.datasource.generate-unique-name=false
-spring.datasource.name=runners
+#spring.application.name=runnerApplication
+#spring.datasource.generate-unique-name=false
+#spring.datasource.name=runners
+#spring.datasource.url=jdbc:postgresql://localhost:5432/runners
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.sql.init.mode=always
